# faster_tweet_nlp_toolkit

./: .gitignore  Cargo.toml  DEV_README.md  README.md
faster_tweet_nlp_toolkit/: Cargo.toml
faster_tweet_nlp_toolkit/src/: constants.rs  lib.rs  main.rs  utils.rs
faster_tweet_nlp_toolkit/src/prep/: mod.rs  regexes.rs  text_parser.rs  text_prep.rs  token.rs  tokenizer.rs  utils.rs
pcre2/: Cargo.toml
pcre2/src/: bytes.rs
python/: Cargo.toml  pyproject.toml  string_operations.py
python/src/: lib.rs  text_parser.rs  text_prep.rs  token.rs
src/: constants.rs  main.rs
src/prep/: regexes.rs  token.rs
