[package]
name = "faster_tweet_nlp_toolkit"
version = "0.1.0"
edition = "2021"
authors = ["yubokai8@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
lazy_static = "1.4.0"
unicode_categories = "0.1.1"
emojis = "0.5.0"
rstest = "0.15.0"
itertools = "0.10.5"
unicode-normalization = "0.1.22"
encoding_rs = "0.8.31"