[package]
name = "faster_tweet_nlp_toolkit"
version = "0.1.0"
edition = "2021"
authors = ["yubokai8@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "faster_tweet_nlp_toolkit"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
unicode_categories = "0.1.1"
emojis = "0.5.2"
rstest = "0.17.0"
itertools = "0.10.5"
unicode-normalization = "0.1.22"
encoding_rs = "0.8.32"
html-escape = "0.2.13"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
once_cell = "1.17.1"

# Copied from https://github.com/priyankat99/rust-pcre2
[dependencies.pcre2]
version = "*"
path = "../pcre2"